Change names and meta to Ubiq

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
 
     <!-- Primary Meta Tags -->
-    <title>Ethereum token lists</title>
-    <meta name="title" content="Ethereum token lists" />
+    <title>Ubiq token lists</title>
+    <meta name="title" content="Ubiq token lists" />
     <meta
       name="description"
       content="Helping the Ethereum community create, discover and maintain lists of reputable tokens in a way that is inclusive, transparent, decentralized and open source."
@@ -36,7 +36,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Ethereum token lists" />
+    <meta property="og:title" content="Ubiq token lists" />
     <meta
       property="og:description"
       content="Helping the Ethereum community create, discover and maintain lists of reputable tokens in a way that is inclusive, transparent, decentralized and open source."
@@ -46,7 +46,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="Ethereum token lists" />
+    <meta property="twitter:title" content="Ubiq token lists" />
     <meta
       property="twitter:description"
       content="Helping the Ethereum community create, discover and maintain lists of reputable tokens in a way that is inclusive, transparent, decentralized and open source."
